--- a/Payment.API/appsettings.json
+++ b/Payment.API/appsettings.json
@@ -24,9 +24,9 @@
     "PageSize": 20
   },
   "JwtSettings": {
-    "ValidIssuer": "ApexBank",
+    "ValidIssuer": "Paragon_Bank",
     "ValidAudience": "https",
-    "Secret": "SuperUserSecretForASuperUserWithASecret",
+    "Secret": "12345abcde12345abcde12345abcde12345@",
     "Expires": 5
   } 
 }
